--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "@types/hapi__joi": "^17.1.14",
     "@types/mysql": "^2.15.24",
     "@types/node": "^20.10.3",
+    "@types/nodemailer": "^6.4.14",
     "azure-function-core-tools": "^0.0.1-security",
+    "prettier": "^3.1.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.2"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.9.7"
   }
 }
