--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/mysql": "^2.15.24",
     "@types/node": "^20.10.3",
     "@types/nodemailer": "^6.4.14",
+    "@types/uuid": "^9.0.7",
     "azure-function-core-tools": "^0.0.1-security",
     "prettier": "^3.1.0",
     "ts-node": "^10.9.1",
@@ -35,6 +36,7 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "uuid": "^9.0.1"
   }
 }
