--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "axios": "^1.6.3",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.7",
     "uuid": "^9.0.1"
