--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "@azure/functions": "^4.1.0",
     "@types/hapi__joi": "^17.1.14",
     "@types/mysql": "^2.15.24",
-    "@types/node": "^20.10.3",
+    "@types/node": "^20.16.5",
     "@types/nodemailer": "^6.4.14",
+    "@types/react": "^18.3.5",
     "@types/uuid": "^9.0.7",
     "azure-function-core-tools": "^0.0.1-security",
     "prettier": "^3.1.0",
@@ -36,6 +37,9 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "axios": "^1.6.3",
+    "mobx": "^6.13.2",
+    "mobx-persist-store": "^1.1.5",
+    "mobx-react": "^9.1.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.7",
     "uuid": "^9.0.1"
